--- a/Terraform-RoboShop/roboshop-terraform/Makefile
+++ b/Terraform-RoboShop/roboshop-terraform/Makefile
@@ -1,12 +1,12 @@
 dev:
-	git pull
+	git pull &>> /dev/null
 	rm -rf  .terraform
 	terraform init -backend-config=env-dev/state.tfvars
 	terraform apply -auto-approve -var-file=env-dev/main.tfvars
 
 
 dev-destroy:
-	git pull
+	git pull &>> /dev/null
 	rm -rf .terraform
 	terraform init -backend-config=env-dev/state.tfvars
 	terraform destroy -auto-approve -var-file=env-dev/main.tfvars
