--- a/Terraform-RoboShop/roboshop-terraform/Makefile
+++ b/Terraform-RoboShop/roboshop-terraform/Makefile
@@ -6,7 +6,7 @@ dev:
 
 
 dev-destroy:
-	git pull &>> /dev/null
+	#git pull &>> /dev/null
 	rm -rf .terraform
 	terraform init -backend-config=env-dev/state.tfvars
 	terraform destroy -auto-approve -var-file=env-dev/main.tfvars
