--- a/Ansible-RoboShop/roles/frontend/tasks/main.yml
+++ b/Ansible-RoboShop/roles/frontend/tasks/main.yml
@@ -1,6 +1,6 @@
 - name: Set a hostname
   ansible.builtin.hostname:
-    name: {{component}}
+    name: "{{component}}"
 
 - name: Installing NGINX WebServer.
   ansible.builtin.yum:
