--- a/Ansible-RoboShop/roles/common/tasks/schema.yml
+++ b/Ansible-RoboShop/roles/common/tasks/schema.yml
@@ -9,7 +9,10 @@
     state: latest
 
 - name: Download the Amazon DocumentDB Certificate Authority (CA) certificate required to authenticate to your cluster.
-  ansible.builtin.shell: wget https://truststore.pki.rds.amazonaws.com/global/global-bundle.pem
+  ansible.builtin.get_url:
+    url: https://truststore.pki.rds.amazonaws.com/global/global-bundle.pem
+    dest: /app/rds-combined-ca-bundle.pem
+
 
 - name: Load the schema to mongodb.
   ansible.builtin.shell: mongo --ssl --host {{ lookup('amazon.aws.aws_ssm', 'docdb.{{env}}.endpoint', region='us-east-1') }}:27017 --sslCAFile global-bundle.pem --username docadmin --password roboshop1234 </app/schema/{{component}}.js
