--- a/Ansible-RoboShop/roles/common/tasks/schema.yml
+++ b/Ansible-RoboShop/roles/common/tasks/schema.yml
@@ -15,4 +15,4 @@
 
 
 - name: Load the schema to mongodb.
-  ansible.builtin.shell: mongo --ssl --host {{ lookup('amazon.aws.aws_ssm', 'docdb.{{env}}.endpoint', region='us-east-1') }}:27017 --sslCAFile global-bundle.pem --username docadmin --password roboshop1234 </app/schema/{{component}}.js
+  ansible.builtin.shell: mongo --ssl --host {{ lookup('amazon.aws.aws_ssm', 'docdb.{{env}}.endpoint', region='us-east-1') }}:27017 --sslCAFile /app/rds-combined-ca-bundle.pem --username docadmin --password roboshop1234 </app/schema/{{component}}.js
