--- a/Ansible-RoboShop/roles/common/tasks/mysql_schema.yml
+++ b/Ansible-RoboShop/roles/common/tasks/mysql_schema.yml
@@ -4,7 +4,7 @@
     state: installed
 
 - name: Loading the schema.
-  ansible.builtin.shell: mysql -h mysql-dev.learntechnology.cloud -uroot -pRoboShop@1 < /app/schema/{{component}}.sql
+  ansible.builtin.shell: mysql -h {{ lookup('amazon.aws.aws_ssm', '{{component}}.{{env}}.DB_HOST', region='us-east-1') }} -u{{ lookup('amazon.aws.aws_ssm', 'rds.{{env}}.master_username', region='us-east-1') }} -p{{ lookup('amazon.aws.aws_ssm', 'rds.{{env}}.master_password', region='us-east-1') }} < /app/schema/{{component}}.sql
 
 
 
