--- a/Ansible-RoboShop/roles/rabbitmq/tasks/main.yml
+++ b/Ansible-RoboShop/roles/rabbitmq/tasks/main.yml
@@ -1,3 +1,7 @@
+- name: Set a hostname
+  ansible.builtin.hostname:
+    name: "{{component}}"
+
 - name: Configuring the erlang repository.
   ansible.builtin.shell: curl -s https://packagecloud.io/install/repositories/rabbitmq/erlang/script.rpm.sh | bash
 
