--- a/Ansible-RoboShop/roles/common/tasks/main.yml
+++ b/Ansible-RoboShop/roles/common/tasks/main.yml
@@ -18,3 +18,7 @@
     enabled: yes
     daemon_reload: true
   when: agent == true
+
+# Setup Prometheus Node Exporter
+- name: Set a hostname
+  ansible.builtin.shell: labauto prometheus-node-exporter
