--- a/Ansible-RoboShop/roles/prometheus/templates/prometheus.yml
+++ b/Ansible-RoboShop/roles/prometheus/templates/prometheus.yml
@@ -39,9 +39,10 @@ scrape_configs:
     ec2_sd_configs:
       - region: us-east-1
         port: 9100
-        filter:
-          - name: "tag: Monitor"
+        # It will fetch the data from all instance but we need the data from few instance only.
+        # So we will use filter. So which instance tagged by "Monitor yes" that will consider.
+        filters:
+          - name: "tag:Monitor"
             value: ["yes"]
-# It will fetch the data from all instance but we need the data from few instance only.
-# So we will use filter. So which instance tagged by "Monitor yes" that will consider.
+
 
