--- a/Ansible-RoboShop/roles/prometheus/templates/prometheus.yml
+++ b/Ansible-RoboShop/roles/prometheus/templates/prometheus.yml
@@ -43,7 +43,18 @@ scrape_configs:
       - region: us-east-1
         port: 9100
         filters:
-        - name: "tag:Monitor"
-          values: [ "yes" ]
+          - name: "tag:Monitor"
+            values: [ "yes" ]
+    relabel_configs:
+      - source_labels: [ _meta_ec2_tag_Name ]
+        target_label: name
+      - source_labels: [ _meta_ec2_tag_env ]
+        target_label: env
+      - source_labels: [ _meta_ec2_instance_state ]
+        target_label: instance_state
+      - source_labels: [ _meta_ec2_instance_type ]
+        target_label: instance_type
+
+
 
 
