--- a/Ansible-RoboShop/roles/prometheus/templates/prometheus.yml
+++ b/Ansible-RoboShop/roles/prometheus/templates/prometheus.yml
@@ -35,8 +35,11 @@ rule_files:
 #      - targets: ["172.31.16.210:9100"]
 
 
-# It will fetch the data from all instance but we need the data from few instance only.
+#ec2_sd_configs: By default, prometheus will gather the data from static node this is mentioned in scrape_config but if we need dynamic data, then we will go with ec2_sd_config so whenever new ec2 will launch, it will start gathering the data from the mentioned region.
+# It will fetch the data from all instances, but we need the data from few instances only.
 # So we will use filter. So which instance tagged by "Monitor yes" that will consider.
+
+#  relabel_configs: By default, prometheus will represent the instance only by {instance="10.0.2.148:9100", job="EC2"}, and by this we cannot understand what is this, so we need more info like instance name instance type or any other metadata then we will use relabel_configs.
 scrape_configs:
   - job_name: 'EC2'
     ec2_sd_configs:
@@ -57,4 +60,4 @@ scrape_configs:
 
 
 
-
+# ansible-pull -i localhost, -U https://github.com/abhijeet4022/DevOps-RoboShop.git Ansible-RoboShop/main.yml -e component=prometheus
