--- a/Ansible-RoboShop/roles/prometheus/templates/prometheus.yml
+++ b/Ansible-RoboShop/roles/prometheus/templates/prometheus.yml
@@ -49,13 +49,13 @@ scrape_configs:
           - name: "tag:Monitor"
             values: [ "yes" ]
     relabel_configs:
-      - source_labels: [ _meta_ec2_tag_Name ]
+      - source_labels: [ __meta_ec2_tag_Name ]
         target_label: name
-      - source_labels: [ _meta_ec2_tag_env ]
+      - source_labels: [ __meta_ec2_tag_env ]
         target_label: env
-      - source_labels: [ _meta_ec2_instance_state ]
+      - source_labels: [ __meta_ec2_instance_state ]
         target_label: instance_state
-      - source_labels: [ _meta_ec2_instance_type ]
+      - source_labels: [ __meta_ec2_instance_type ]
         target_label: instance_type
 
 
