--- a/Ansible-RoboShop/roles/common/tasks/systemd.yml
+++ b/Ansible-RoboShop/roles/common/tasks/systemd.yml
@@ -10,5 +10,17 @@
     enabled: yes
     daemon_reload: true
 
+- name: Setup Rsyslog Conf File.
+  ansible.builtin.template:
+    src: "rsyslog.conf"
+    dest: /etc/rsyslog.d/roboshop.conf
+
+- name: Restarted Rsyslog service.
+  ansible.builtin.systemd:
+    name: "rsyslog"
+    state: restarted
+    enabled: yes
+
+
 
 
