--- a/Ansible-RoboShop/roles/common/templates/rsyslog.conf
+++ b/Ansible-RoboShop/roles/common/templates/rsyslog.conf
@@ -1,6 +1,13 @@
-template(name="OnlyMsg" type="String" String="%msg:::drop-last-lf%\n")
+#template(name="OnlyMsg" type="String" String="%msg:::drop-last-lf%\n")
+#
+#if ($programname == '{{component}}') then {
+#action (type="omfile" file="/var/log/{{component}}.log" template="OnlyMsg")
+#& stop
+#}
 
-if ($programname == '{{component}}') then {
-action (type="omfile" file="/var/log/{{component}}.log" template="OnlyMsg")
-& stop
+template(name="OnlyMsg" type="string" string="%msg:::drop-last-lf%\n")
+
+if( $programname == '{{component}}' ) then {
+    action(type="omfile" file="/var/log/{{component}}.log" template="OnlyMsg")
+    & stop
 }
