--- a/Ansible-RoboShop/roles/elk/templates/logstash.conf
+++ b/Ansible-RoboShop/roles/elk/templates/logstash.conf
@@ -3,10 +3,10 @@ input {
         port => 5044
     }
 }
-filter {
-    grok {
-        match => { "message" => "%{IP:client_ip}%{SPACE}%{HTTPDATE:time_stamp}%{SPACE}%{WORD:http_method}%{SPACE}%{PATH:http_path}%{SPACE}%{WORD:http_proto}/%{NUMBER:http_proto_version}%{SPACE}%{NUMBER:http_status:int}%{SPACE}%{NUMBER:http_response_size_in_bytes:int}%{SPACE}%{NUMBER:response_time:float}" }
-    }
+#filter {
+#    grok {
+#        match => { "message" => "%{IP:client_ip}%{SPACE}%{HTTPDATE:time_stamp}%{SPACE}%{WORD:http_method}%{SPACE}%{PATH:http_path}%{SPACE}%{WORD:http_proto}/%{NUMBER:http_proto_version}%{SPACE}%{NUMBER:http_status:int}%{SPACE}%{NUMBER:http_response_size_in_bytes:int}%{SPACE}%{NUMBER:response_time:float}" }
+#    }
 
 output {
     elasticsearch {
