--- a/Ansible-RoboShop/roles/common/tasks/java.yml
+++ b/Ansible-RoboShop/roles/common/tasks/java.yml
@@ -20,3 +20,8 @@
 - name: Importing Systemd Setup Tasks.
   ansible.builtin.import_tasks: systemd.yml
 
+- name: Filebeat Configuration
+  ansible.builtin.import_role:
+    name: elk
+    tasks_from: filebeat
+
