--- a/Ansible-RoboShop/roles/common/tasks/nodejs.yml
+++ b/Ansible-RoboShop/roles/common/tasks/nodejs.yml
@@ -26,3 +26,8 @@
 
 - name: Systemd {{component}} service setup.
   ansible.builtin.import_tasks: systemd.yml
+
+- name: Filebeat Configuration
+  ansible.builtin.import_role:
+    name: elk
+    tasks_from: filebeat
