--- a/Ansible-RoboShop/roles/common/tasks/python.yml
+++ b/Ansible-RoboShop/roles/common/tasks/python.yml
@@ -16,3 +16,8 @@
 
 - name: Importing Systemd Tasks.
   ansible.builtin.import_tasks: systemd.yml
+
+- name: Filebeat Configuration
+  ansible.builtin.import_role:
+    name: elk
+    tasks_from: filebeat
