--- a/Ansible-RoboShop/roles/elk/templates/logstash.conf
+++ b/Ansible-RoboShop/roles/elk/templates/logstash.conf
@@ -4,35 +4,22 @@ input {
     }
 }
 
-; filter {
-;
-;     if [fields][log_type] == "raw" {
-;         if [fields][component] == "frontend" {
-;
-;              grok {
-;                    match => { "message" => "%{IP:client_ip}%{SPACE}%{HTTPDATE:time_stamp}%{SPACE}%{WORD:http_method}%{SPACE}%{PATH:http_path}%{SPACE}%{WORD:http_proto}/%{NUMBER:http_proto_version}%{SPACE}%{NUMBER:http_status:int}%{SPACE}%{NUMBER:http_response_size_in_bytes:int}%{SPACE}%{NUMBER:response_time:float}" }
-;                 }
-;
-;             if [http_path] =~ "/apt/rating/*" {
-;                 drop { }
-;             }
-;         }
-;     }
-
 filter {
-  if [fields][log_type] == "raw" {
-    if [fields][component] == "frontend" {
 
-        grok {
-          match => { "message" => "%{IP:client_ip}%{SPACE}%{HTTPDATE:time_stamp}%{SPACE}%{WORD:http_method}%{SPACE}%{PATH:http_path}%{SPACE}%{WORD:http_proto}/%{NUMBER:http_proto_version}%{SPACE}%{NUMBER:http_status:int}%{SPACE}%{NUMBER:http_response_size_in_bytes:int}%{SPACE}%{NUMBER:response_time:float}" }
-        }
+    if [fields][log_type] == "raw" {
+        if [fields][component] == "frontend" {
 
-        if [http_path] =~ "/api/ratings/*" {
-          drop { }
+             grok {
+                   match => { "message" => "%{IP:client_ip}%{SPACE}%{HTTPDATE:time_stamp}%{SPACE}%{WORD:http_method}%{SPACE}%{PATH:http_path}%{SPACE}%{WORD:http_proto}/%{NUMBER:http_proto_version}%{SPACE}%{NUMBER:http_status:int}%{SPACE}%{NUMBER:http_response_size_in_bytes:int}%{SPACE}%{NUMBER:response_time:float}" }
+                }
+
+            if [http_path] =~ "/apt/rating/*" {
+                drop { }
+            }
         }
     }
 
-  }
+
 
     if [fields][log_type] == "json" {
         json {
