--- a/Ansible-RoboShop/roles/elk/templates/logstash.conf
+++ b/Ansible-RoboShop/roles/elk/templates/logstash.conf
@@ -13,7 +13,7 @@ filter {
                    match => { "message" => "%{IP:client_ip}%{SPACE}%{HTTPDATE:time_stamp}%{SPACE}%{WORD:http_method}%{SPACE}%{PATH:http_path}%{SPACE}%{WORD:http_proto}/%{NUMBER:http_proto_version}%{SPACE}%{NUMBER:http_status:int}%{SPACE}%{NUMBER:http_response_size_in_bytes:int}%{SPACE}%{NUMBER:response_time:float}" }
                 }
 
-            if [http_path] =~ "/apt/ratings/*" {
+            if [http_path] =~ "/api/catalogue/*" {
                 drop { }
             }
 
