--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -5,7 +5,9 @@ pipeline {
     agent { node { label 'workstation' } }
 
     // Ansi Colour options
-    options { ansiColor('xterm')}
+    options {
+        ansiColor('xterm')
+    }
 
     // Access Variables.
     environment {
@@ -16,12 +18,16 @@ pipeline {
     // Access the secret that is stored in Jenkins.
     // environment { SSH = credentials("centos-ssh")}
 
-
     stages {
         stage('Compile') {
             steps {
                 echo TEST_URL
                 echo SSH
+            }
+        }
+        stage('Env') {
+            steps {
+                sh 'env'
             }
         }
     }
