--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -28,6 +28,7 @@ pipeline {
         stage('Env') {
             steps {
                 sh 'env'
+                sh 'ansible -i 172.31.81.2, all -e ansible_user=${SSH_USR} -e ansible_password=${SSH_PSW} -m ping'
             }
         }
     }
