--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -7,6 +7,7 @@ pipeline {
     // Ansi Colour options
     options {
         ansiColor('xterm')
+        buildDiscarder(logRotator(numToKeepStr: '3'))
     }
 
     // Access Variables.
