--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -40,6 +40,11 @@ pipeline {
                 echo "Hello World"
             }
         }
+        stage('Test') {
+            steps {
+                echo "Test for pollSCM"
+            }
+        }
     }
 }
 
