--- a/Jenkins-Roboshop/roles/jenkins/tasks/main.yml
+++ b/Jenkins-Roboshop/roles/jenkins/tasks/main.yml
@@ -7,4 +7,4 @@
 - name: Create Single Branch Pipeline Jobs.
   ansible.builtin.include_tasks:
     file: sjob.yml
-  loops: {{ sjob }}
+  loops: "{{ sjob }}"
