--- a/Jenkins-Roboshop/roles/jenkins/tasks/mjob.yml
+++ b/Jenkins-Roboshop/roles/jenkins/tasks/mjob.yml
@@ -7,6 +7,6 @@
   community.general.jenkins_job:
     config: "{{ lookup('file', '/tmp/mjob.xml') }}"
     name: "{{ item.job_name}}"
-    password: admin
-    url: http://172.31.19.166:8080
-    user: DevOps321
+    password: DevOps321
+    url: http://172.31.19.166:8080/
+    user: admin
