--- a/Jenkins-Roboshop/roles/jenkins/tasks/sjob.yml
+++ b/Jenkins-Roboshop/roles/jenkins/tasks/sjob.yml
@@ -7,7 +7,7 @@
   community.general.jenkins_job:
     config: "{{ lookup('file', '/tmp/sjob.xml') }}"
     name: "{{ item.job_name}}"
-    password: admin
+    password: DevOps321
     url: http://172.31.19.166:8080
-    user: DevOps321
+    user: admin
 
