--- a/Jenkins-Roboshop/jenkins-jobs.yml
+++ b/Jenkins-Roboshop/jenkins-jobs.yml
@@ -4,10 +4,10 @@
   roles:
     - jenkins
   vars:
-    folder:
-      - { folder_name: "abc" }
-      - { folder_name: "xyz" }
+    folders:
+      - { folder_name: "CI-Pipeline" }
+      - { folder_name: "infra-jobs" }
     mjob:
-      - { job_name: "cart", repo_name: "https://github.com/abhijeet4022/DevOps-RoboShop.git"}
+      - { job_name: "cart", repo_name: "https://github.com/abhijeet4022/DevOps-RoboShop.git", folder_name: "CI-Pipeline"}
     sjob:
-      - { job_name: "roboshop-terraform", repo_name: "https://github.com/abhijeet4022/DevOps-RoboShop.git"}
+      - { job_name: "roboshop-terraform", repo_name: "https://github.com/abhijeet4022/DevOps-RoboShop.git", folder_name: "infra-jobs"}
