--- a/Jenkins-Roboshop/jenkins-jobs.yml
+++ b/Jenkins-Roboshop/jenkins-jobs.yml
@@ -8,7 +8,7 @@
       - { folder_name: "CI-Pipeline" }
       - { folder_name: "infra-jobs" }
     mjob:
-      - { job_name: "frontend", repo_name: "https://github.com/abhijeet4022/DevOps-RoboShop.git", folder_name: "CI-Pipeline"}
+      - { job_name: "frontend", repo_name: "https://github.com/abhijeet4022/cart.git", folder_name: "CI-Pipeline"}
       - { job_name: "catalogue", repo_name: "https://github.com/abhijeet4022/DevOps-RoboShop.git", folder_name: "CI-Pipeline"}
       - { job_name: "cart", repo_name: "https://github.com/abhijeet4022/DevOps-RoboShop.git", folder_name: "CI-Pipeline"}
       - { job_name: "user", repo_name: "https://github.com/abhijeet4022/DevOps-RoboShop.git", folder_name: "CI-Pipeline"}
