--- a/Jenkins-Roboshop/jenkins-jobs.yml
+++ b/Jenkins-Roboshop/jenkins-jobs.yml
@@ -8,11 +8,11 @@
       - { folder_name: "CI-Pipeline" }
       - { folder_name: "infra-jobs" }
     mjob:
-      - { job_name: "frontend", repo_name: "https://github.com/abhijeet4022/cart.git", folder_name: "CI-Pipeline"}
-      - { job_name: "catalogue", repo_name: "https://github.com/abhijeet4022/DevOps-RoboShop.git", folder_name: "CI-Pipeline"}
-      - { job_name: "cart", repo_name: "https://github.com/abhijeet4022/DevOps-RoboShop.git", folder_name: "CI-Pipeline"}
-      - { job_name: "user", repo_name: "https://github.com/abhijeet4022/DevOps-RoboShop.git", folder_name: "CI-Pipeline"}
-      - { job_name: "shipping", repo_name: "https://github.com/abhijeet4022/DevOps-RoboShop.git", folder_name: "CI-Pipeline"}
-      - { job_name: "payment", repo_name: "https://github.com/abhijeet4022/DevOps-RoboShop.git", folder_name: "CI-Pipeline"}
+      - { job_name: "frontend", repo_name: "https://github.com/abhijeet4022/frontend.git", folder_name: "CI-Pipeline"}
+      - { job_name: "catalogue", repo_name: "https://github.com/abhijeet4022/catalogue.git", folder_name: "CI-Pipeline"}
+      - { job_name: "cart", repo_name: "https://github.com/abhijeet4022/cart.git", folder_name: "CI-Pipeline"}
+      - { job_name: "user", repo_name: "https://github.com/abhijeet4022/user.git", folder_name: "CI-Pipeline"}
+      - { job_name: "shipping", repo_name: "https://github.com/abhijeet4022/shipping.git", folder_name: "CI-Pipeline"}
+      - { job_name: "payment", repo_name: "https://github.com/abhijeet4022/payment.git", folder_name: "CI-Pipeline"}
     sjob:
       - { job_name: "roboshop-terraform", repo_name: "https://github.com/abhijeet4022/DevOps-RoboShop.git", folder_name: "infra-jobs"}
