--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -1,74 +1,21 @@
-// Define Variables
-def x = 10
-env.y = 20
-
-// Define Function
-def sample(){
-print "Sample Function"
-}
-
-
-node('workstation'){
-    if (x > 10) {
-        stage('Test'){
-            print x
-        }
-    } else {
-        stage('Test1'){
-            sample()
-        }
-    }
-}
-
-
-
-
-// pipeline {
-//     // agent any
+// // Define Variables
+// def x = 10
+// env.y = 20
 //
-//     // Mention the nodes.
-//     agent { node { label 'workstation' } }
+// // Define Function
+// def sample(){
+// print "Sample Function"
+// }
 //
-//     // Poliscm trigger to fetch the changes every one minute.
-//     triggers { pollSCM('*/1 * * * *') }
 //
-//     // Ansi Colour options
-//     options {
-//         ansiColor('xterm')
-//         buildDiscarder(logRotator(numToKeepStr: '3'))
-//     }
-//
-//     // Access Variables.
-//     environment {
-//     TEST_URL = "google.com"
-//     SSH = credentials("centos-ssh")
-//     }
-//
-//     // Access the secret that is stored in Jenkins.
-//     // environment { SSH = credentials("centos-ssh")}
-//
-//     stages {
-//         stage('Compile') {
-//             steps {
-//                 echo TEST_URL
-//                 echo SSH
-//             }
+// node('workstation'){
+//     if (x > 10) {
+//         stage('Test'){
+//             print x
 //         }
-//         stage('Env') {
-//             steps {
-//                 sh 'env'
-//                 sh 'ansible -i 172.31.81.2, all -e ansible_user=${SSH_USR} -e ansible_password=${SSH_PSW} -m ping'
-//             }
-//         }
-//         stage('Hello') {
-//             steps {
-//                 echo "Hello World"
-//             }
-//         }
-//         stage('Test') {
-//             steps {
-//                 echo "Test for pollSCM"
-//             }
+//     } else {
+//         stage('Test1'){
+//             sample()
 //         }
 //     }
 // }
@@ -76,14 +23,67 @@ node('workstation'){
 
 
 
+pipeline {
+    // agent any
 
-//     post {
-//         always {
-//             echo 'post'
-//             // Send Email
-//             // Trigger Some another job
-//             // Update some JIRA Status about the build.
-//     }
-//     }
+    // Mention the nodes.
+    agent { node { label 'workstation' } }
+
+    // Poliscm trigger to fetch the changes every one minute.
+    triggers { pollSCM('*/1 * * * *') }
+
+    // Ansi Colour options
+    options {
+        ansiColor('xterm')
+        buildDiscarder(logRotator(numToKeepStr: '3'))
+    }
+
+    // Access Variables.
+    environment {
+    TEST_URL = "google.com"
+    SSH = credentials("centos-ssh")
+    }
+
+    // Access the secret that is stored in Jenkins.
+    // environment { SSH = credentials("centos-ssh")}
+
+    stages {
+        stage('Compile') {
+            steps {
+                echo TEST_URL
+                echo SSH
+            }
+        }
+        stage('Env') {
+            steps {
+                sh 'env'
+                sh 'ansible -i 172.31.81.2, all -e ansible_user=${SSH_USR} -e ansible_password=${SSH_PSW} -m ping'
+            }
+        }
+        stage('Hello') {
+            steps {
+                echo "Hello World"
+            }
+        }
+        stage('Test') {
+            steps {
+                echo "Test for pollSCM"
+            }
+        }
+    }
+}
+
+
+
+
+
+    post {
+        always {
+            echo 'post'
+            // Send Email
+            // Trigger Some another job
+            // Update some JIRA Status about the build.
+    }
+    }
 
 
