--- a/Ansible-RoboShop/roles/common/tasks/appprereq.yml
+++ b/Ansible-RoboShop/roles/common/tasks/appprereq.yml
@@ -18,7 +18,7 @@
 #      dest: /app/
 #      remote_src: yes
 
-- name: Downloading the application content for Nexus.
+- name: Downloading the application content from Nexus.
   ansible.builtin.unarchive:
     src: http://{{username}}:{{password}}@172.31.10.247:8081/repository/{{component}}/{{component}}-{{appVersion}}.zip
     dest: /app/
@@ -27,7 +27,3 @@
     username: "{{ lookup('amazon.aws.aws_ssm', 'nexus.{{env}}.username', region='us-east-1') }}"
     password: "{{ lookup('amazon.aws.aws_ssm', 'nexus.{{env}}.password', region='us-east-1') }}"
     appVersion: "{{ lookup('amazon.aws.aws_ssm', '{{component}}.{{env}}.appVersion', region='us-east-1') }}"
-
-
-
-
