--- a/Terraform-RoboShop/roboshop-terraform/Makefile
+++ b/Terraform-RoboShop/roboshop-terraform/Makefile
@@ -4,6 +4,12 @@ dev:
 	terraform init -backend-config=env-dev/state.tfvars
 	terraform apply -auto-approve -var-file=env-dev/main.tfvars
 
+prod:
+	git pull &>> /dev/null
+	rm -rf  .terraform
+	terraform init -backend-config=env-prod/state.tfvars
+	terraform apply -auto-approve -var-file=env-prod/main.tfvars
+
 
 dev-destroy:
 	#git pull &>> /dev/null
