--- a/Ansible-RoboShop/roles/frontend/tasks/main.yml
+++ b/Ansible-RoboShop/roles/frontend/tasks/main.yml
@@ -4,7 +4,7 @@
     state: latest
 
 - name: Copying reverse proxy file.
-  ansible.builtin.copy:
+  ansible.builtin.template:
     src: roboshop.conf
     dest: /etc/nginx/default.d/roboshop.conf
 
