--- a/Terraform-RoboShop/roboshop-terraform/Makefile
+++ b/Terraform-RoboShop/roboshop-terraform/Makefile
@@ -12,7 +12,7 @@ prod:
 
 
 dev-destroy:
-	#git pull &>> /dev/null
+	git pull &>> /dev/null
 	rm -rf .terraform
 	terraform init -backend-config=env-dev/state.tfvars
 	terraform destroy -auto-approve -var-file=env-dev/main.tfvars
