--- a/Terraform-RoboShop/roboshop-terraform/Makefile
+++ b/Terraform-RoboShop/roboshop-terraform/Makefile
@@ -12,13 +12,13 @@ prod:
 
 
 dev-destroy:
-	git pull &>> /dev/null
+	#git pull &>> /dev/null
 	rm -rf .terraform
 	terraform init -backend-config=env-dev/state.tfvars
 	terraform destroy -auto-approve -var-file=env-dev/main.tfvars
 
 prod-destroy:
-	git pull &>> /dev/null
+	#git pull &>> /dev/null
 	rm -rf  .terraform
 	terraform init -backend-config=env-prod/state.tfvars
 	terraform destroy -auto-approve -var-file=env-prod/main.tfvars
