--- a/Ansible-RoboShop/roles/frontend/templates/roboshop.conf
+++ b/Ansible-RoboShop/roles/frontend/templates/roboshop.conf
@@ -4,11 +4,11 @@ location /images/ {
   root   /usr/share/nginx/html;
   try_files $uri /images/placeholder.jpg;
 }
-location /api/catalogue/ { proxy_pass http://catalogue-{env}.learntechnology.cloud:80/; }
-location /api/user/ { proxy_pass http://user-{env}.learntechnology.cloud:80/; }
-location /api/cart/ { proxy_pass http://cart-{env}.learntechnology.cloud:80/; }
-location /api/shipping/ { proxy_pass http://shipping-{env}.learntechnology.cloud:80/; }
-location /api/payment/ { proxy_pass http://payment-{env}.learntechnology.cloud:80/; }
+location /api/catalogue/ { proxy_pass http://catalogue-{{env}}.learntechnology.cloud:80/; }
+location /api/user/ { proxy_pass http://user-{{env}}.learntechnology.cloud:80/; }
+location /api/cart/ { proxy_pass http://cart-{{env}}.learntechnology.cloud:80/; }
+location /api/shipping/ { proxy_pass http://shipping-{{env}}.learntechnology.cloud:80/; }
+location /api/payment/ { proxy_pass http://payment-{{env}}.learntechnology.cloud:80/; }
 
 location /health {
   stub_status on;
