--- a/Ansible-RoboShop/Jenkinsfile
+++ b/Ansible-RoboShop/Jenkinsfile
@@ -1,26 +1,3 @@
-pipeline {
+@Library('roboshop') _
 
-    agent any
-
-    options {
-        ansiColor('xterm')
-        buildDiscarder(logRotator(numToKeepStr: '3'))
-    }
-
-    environment {
-        SSH = credentials("centos-ssh")
-    }
-
-    stages {
-        stage('SSH') {
-            steps {
-                echo "${SSH_PSW}"
-                echo "${SSH_USR}"
-            }
-        }
-    }
-
-}
-
-
-
+deploy()
