--- a/Terraform-RoboShop/roboshop-terraform/Makefile
+++ b/Terraform-RoboShop/roboshop-terraform/Makefile
@@ -6,11 +6,19 @@ dev:
 	terraform init -backend-config=env-dev/state.tfvars
 	terraform apply -auto-approve -var-file=env-dev/main.tfvars
 
+#prod:
+#	git pull &>> /dev/null
+#	rm -rf  .terraform
+#	terraform init -backend-config=env-prod/state.tfvars
+#	terraform apply -auto-approve -var-file=env-prod/main.tfvars
+
+
 prod:
-	git pull &>> /dev/null
-	rm -rf  .terraform
-	terraform init -backend-config=env-prod/state.tfvars
-	terraform apply -auto-approve -var-file=env-prod/main.tfvars
+    git pull 2>&1 | tee git_pull.log
+    rm -rf .terraform
+    terraform init -backend-config=env-prod/state.tfvars 2>&1 | tee terraform_init.log
+    terraform apply -auto-approve -var-file=env-prod/main.tfvars 2>&1 | tee terraform_apply.log
+
 
 
 dev-destroy:
