--- a/Terraform-RoboShop/roboshop-terraform/Makefile
+++ b/Terraform-RoboShop/roboshop-terraform/Makefile
@@ -13,11 +13,17 @@ dev:
 #	terraform apply -auto-approve -var-file=env-prod/main.tfvars
 
 
+#prod:
+#	git pull 2>&1 | tee git_pull.log
+#	rm -rf .terraform
+#	terraform init -backend-config=env-prod/state.tfvars 2>&1 | tee terraform_init.log
+#	terraform apply -auto-approve -var-file=env-prod/main.tfvars 2>&1 | tee terraform_apply.log
+
 prod:
-	git pull 2>&1 | tee git_pull.log
+	git pull &>> /dev/null
 	rm -rf .terraform
-	terraform init -backend-config=env-prod/state.tfvars 2>&1 | tee terraform_init.log
-	terraform apply -auto-approve -var-file=env-prod/main.tfvars 2>&1 | tee terraform_apply.log
+	terraform init -backend-config=env-prod/state.tfvars
+	terraform apply -auto-approve -var-file=env-prod/main.tfvars
 
 
 
