--- a/Jenkins-Roboshop/roles/jenkins/tasks/main.yml
+++ b/Jenkins-Roboshop/roles/jenkins/tasks/main.yml
@@ -15,7 +15,7 @@
   loop: "{{ sjob }}"
 
 
-- name: Create Single Branch Pipeline Jobs.
-  ansible.builtin.include_tasks:
-    file: sjob.yml
-  loop: "{{ helm }}"
+#- name: Create Single Branch Pipeline Jobs.
+#  ansible.builtin.include_tasks:
+#    file: sjob.yml
+#  loop: "{{ helm }}"
