--- a/Jenkins-Roboshop/jenkins-jobs.yml
+++ b/Jenkins-Roboshop/jenkins-jobs.yml
@@ -19,5 +19,5 @@
       - { job_name: "roboshop-terraform", repo_name: "https://github.com/abhijeet4022/DevOps-RoboShop.git", folder_name: "infra-jobs", jenkinsfile: "Terraform-RoboShop/roboshop-terraform"}
       - { job_name: "app-deployment", repo_name: "https://github.com/abhijeet4022/DevOps-RoboShop.git", folder_name: "App-Deployment", jenkinsfile: "Ansible-RoboShop"}
 
-#    helm:
-#      - { job_name: "helm-deployment", repo_name: "https://github.com/abhijeet4022/helm.git", folder_name: "App-Deployment"}
+    helm:
+      - { job_name: "helm-deployment", repo_name: "https://github.com/abhijeet4022/helm.git", folder_name: "App-Deployment"}
